<resources>
    <string name="app_name">Modium</string>
    <string name="settings_title">Settings</string>
    <string name="hint_url">Search or type a URL</string>
    <string name="new_tab">New tab</string>
    <string name="new_private_tab">New private tab</string>
    <string name="action_forward">Forward</string>
    <string name="action_back">Back</string>
    <string name="action_reload">Reload</string>
    <string name="action_share">Share</string>
    <string name="action_tabs">Tabs</string>
    <string name="action_menu">Menu</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_history">History</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_desktop_site">Desktop site</string>
    <string name="action_find_in_page">Find in page</string>
    <string name="shields_title">Modium Shields</string>
    <string name="shields_ads_trackers">Block ads &amp; trackers</string>
    <string name="shields_https_upgrade">Upgrade connections to HTTPS</string>
    <string name="shields_block_scripts">Block scripts</string>
    <string name="shields_block_popups">Block pop-ups</string>
    <string name="shields_block_fingerprint">Block fingerprinting</string>
    <string name="shields_status_up">%1$d items blocked on this page</string>
    <string name="private_mode_on">Private mode</string>
    <string name="no_tabs_open">No tabs open</string>
    <string name="close_tab">Close tab</string>
    <string name="settings_section_shields">Shields</string>
    <string name="settings_section_privacy">Privacy</string>
    <string name="settings_section_general">General</string>
    <string name="settings_block_ads">Block ads &amp; trackers</string>
    <string name="settings_block_ads_summary">Uses a built-in filter list to stop ad and tracker requests</string>
    <string name="settings_https_upgrade">HTTPS upgrade</string>
    <string name="settings_https_upgrade_summary">Automatically try https:// before http://</string>
    <string name="settings_block_popups">Block pop-ups</string>
    <string name="settings_block_3p_cookies">Block third-party cookies</string>
    <string name="settings_block_3p_cookies_summary">Stops sites embedded in other pages from tracking you with cookies</string>
    <string name="settings_do_not_track">Send \"Do Not Track\" requests</string>
    <string name="settings_do_not_track_summary">Asks sites not to track you (most ignore it, but it doesn\'t hurt)</string>
    <string name="settings_clear_browsing_data">Clear browsing data</string>
    <string name="settings_search_engine">Search engine</string>
    <string name="settings_home_page">Home page</string>
    <string name="settings_save_passwords">Offer to save passwords</string>
    <string name="settings_desktop_default">Request desktop site by default</string>
    <string name="settings_desktop_default_summary">New tabs load the full desktop version of sites instead of mobile</string>
    <string name="settings_data_cleared">Browsing data cleared</string>

    <string name="new_tab_tagline">Protection. Privacy. Peace of mind.</string>
    <string name="new_tab_blocked_zero">No trackers blocked yet this session</string>
    <string name="new_tab_blocked_count">%1$d trackers blocked this session</string>

    <string name="shields_section_protections">Protections</string>
    <string name="shields_ads_trackers_desc">Hides ads and stops sites from sending your data to tracking companies</string>
    <string name="shields_https_upgrade_desc">Switches to the secure, encrypted version of a site whenever possible</string>
    <string name="shields_block_popups_desc">Stops extra windows from opening without you asking</string>
    <string name="shields_block_fingerprint_desc">Makes it harder for sites to recognize your device and follow you across the web</string>

    <string name="action_download">Download</string>
    <string name="download_sheet_title">Download</string>
    <string name="download_fetching">Looking for downloadable formats…</string>
    <string name="download_no_formats">Couldn\'t find anything downloadable on this page</string>
    <string name="download_started">Download started</string>
    <string name="download_channel_name">Downloads</string>
    <string name="download_notification_title">Downloading</string>
    <string name="download_progress">%1$d%%</string>
    <string name="download_in_progress">Downloading…</string>
    <string name="download_complete">Download complete</string>
    <string name="download_failed">Download failed</string>
</resources>
