<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_section_shields">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_shield"
            app:key="pref_block_ads"
            app:summary="@string/settings_block_ads_summary"
            app:title="@string/settings_block_ads" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_lock"
            app:key="pref_https_upgrade"
            app:summary="@string/settings_https_upgrade_summary"
            app:title="@string/settings_https_upgrade" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_close"
            app:key="pref_block_popups"
            app:title="@string/settings_block_popups" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_section_privacy">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_private"
            app:key="pref_block_3p_cookies"
            app:summary="@string/settings_block_3p_cookies_summary"
            app:title="@string/settings_block_3p_cookies" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_eye_off"
            app:key="pref_do_not_track"
            app:summary="@string/settings_do_not_track_summary"
            app:title="@string/settings_do_not_track" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_lock"
            app:key="pref_save_passwords"
            app:title="@string/settings_save_passwords" />

        <Preference
            app:icon="@drawable/ic_trash"
            app:key="pref_clear_data"
            app:title="@string/settings_clear_browsing_data" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_section_general">

        <ListPreference
            app:defaultValue="duckduckgo"
            app:entries="@array/search_engine_names"
            app:entryValues="@array/search_engine_values"
            app:icon="@drawable/ic_search"
            app:key="pref_search_engine"
            app:title="@string/settings_search_engine" />

        <EditTextPreference
            app:defaultValue="https://duckduckgo.com"
            app:icon="@drawable/ic_star"
            app:key="pref_home_page"
            app:title="@string/settings_home_page" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:icon="@drawable/ic_desktop"
            app:key="pref_desktop_default"
            app:summary="@string/settings_desktop_default_summary"
            app:title="@string/settings_desktop_default" />

    </PreferenceCategory>

</PreferenceScreen>
